# fsm-engine

./: .gitignore  CMakeLists.txt  LEARN.md  README.md  REQUIREMENTS.md
.github/workflows/: ci.yml
examples/: effector_demo.cpp
exercises/: E1_add_state.md  E2_count_transitions.md  E3_strict_guard.md  E4_history_buffer.md  E5_const_correctness.md  README.md
include/fsm/: Event.hpp  FSM.hpp  State.hpp  Transition.hpp
src/: FSM.cpp
tests/: test_fsm.cpp
